--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,7 @@
 <div class="login">
     <h1>LOGIN</h1>
-        <form action="#" name = "myform">
-        <input id="uname" type="username" name="uname" ng-model="username" placeholder="Username" ng-minlength="3" 
+        <form  name = "myform">
+        <input id="uname" type="username" name="uname" ng-model="ap.username" placeholder="Username" ng-minlength="3" 
         ng-maxlength="8" required autofocus>
             
             <div ng-messages="myform.uname.$error" ng-show="myform.uname.$touched">
@@ -16,7 +16,7 @@
             </div>
 
             
-        <input id="pwd" type="password" name="pwd" ng-model='password' placeholder="Password" ng-minlength="3" 
+        <input id="pwd" type="password" name="pwd" ng-model='ap.password' placeholder="Password" ng-minlength="3" 
         ng-maxlength="8" required>
             <span ng-messages="myform.pwd.$error" ng-show="myform.pwd.$touched">
                 <div messages></div>
@@ -29,8 +29,8 @@
             </span>
             
         
-            <button type="submit" name="log" value="login" ng-click="login()">SIGN IN</button>
-            <span ng-bind="msg"> </span>
+            <button name="log"  ng-click = "ap.login()">SIGN IN</button>
+            <span ng-bind="ap.msg"> </span>
         </form>   
         
     </div>
