--- a/app/views/details.html
+++ b/app/views/details.html
@@ -1,6 +1,6 @@
 <div id="details">
     
-<h2>{{head}}</h2>
+<h2>{{detail.head}}</h2>
     <table>
 <tr>
     <td><label>Company Name </label></td><td><h3>{{detail.name}}</h3></td>
